<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:padding="20dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:layout_marginTop="30dp"
        android:alpha="0"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title"
        android:text="@string/tvf_email"/>

    <com.dicoding.abednego.storyapp.customview.CustomEmailEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="email"
        android:background="@drawable/bg_edit_text"
        android:padding="10dp"
        android:alpha="0"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        tools:layout_editor_absoluteX="20dp"
        android:text="@string/tvf_password"/>

    <com.dicoding.abednego.storyapp.customview.CustomPasswordEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:autofillHints="password"
        android:background="@drawable/bg_edit_text"
        android:padding="10dp"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_forgot_pw"
        android:alpha="0"
        android:textColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <com.dicoding.abednego.storyapp.customview.CustomButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_login"
        android:textSize="16sp"
        android:textStyle="bold"
        android:alpha="0"
        app:layout_constraintBottom_toTopOf="@+id/tv_dont_have_account"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/tv_dont_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/login_dont_have_account"
        android:gravity="center"
        android:alpha="0"
        android:layout_marginBottom="30dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>