<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.upload.UploadActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/desc_image_story"
            android:src="@drawable/ic_black_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/cameraXButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_button_purple"
                android:text="@string/camera_x"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_gallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_button_purple"
                android:text="@string/gallery"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_add_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/view_share_my_location"/>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/description"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:minHeight="48dp"
            android:inputType="text"
            android:background="@drawable/bg_edit_text"
            android:autofillHints=""
            android:hint="@string/input_description"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/upload"
            android:background="@drawable/rounded_button_purple"
            />
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="visible"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</ScrollView>